RoS2/Sensor_Ros2/log/build_2025-10-15_14-40-11/i2c_distance_publisher/stdout_stderr.log
[ 50%] Building CXX object CMakeFiles/i2c_distance_node.dir/src/i2c_distance_node.cpp.o
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/i2c_distance_publisher/src/i2c_distance_node.cpp: In member function ‘bool i2c_distance_publisher::I2CDistanceNode::write_register_byte(uint8_t, uint8_t)’:
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/i2c_distance_publisher/src/i2c_distance_node.cpp:184:18: error: aggregate ‘i2c_msg message’ has incomplete type and cannot be defined
  184 |   struct i2c_msg message;
      |                  ^~~~~~~
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/i2c_distance_publisher/src/i2c_distance_node.cpp: In member function ‘bool i2c_distance_publisher::I2CDistanceNode::read_bytes(uint8_t, uint8_t*, std::size_t)’:
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/i2c_distance_publisher/src/i2c_distance_node.cpp:210:18: error: elements of array ‘i2c_msg messages [2]’ have incomplete type
  210 |   struct i2c_msg messages[2];
      |                  ^~~~~~~~
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/i2c_distance_publisher/src/i2c_distance_node.cpp:210:18: error: storage size of ‘messages’ isn’t known
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/i2c_distance_publisher/src/i2c_distance_node.cpp:219:23: error: ‘I2C_M_RD’ was not declared in this scope
  219 |   messages[1].flags = I2C_M_RD;
      |                       ^~~~~~~~
gmake[2]: *** [CMakeFiles/i2c_distance_node.dir/build.make:76: CMakeFiles/i2c_distance_node.dir/src/i2c_distance_node.cpp.o] 오류 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/i2c_distance_node.dir/all] 오류 2
gmake: *** [Makefile:146: all] 오류 2
